--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/hampusborgos/country-flags/issues"
   },
-  "homepage": "https://hampusborgos.github.io/country-flags/"
+  "homepage": "https://hampusborgos.github.io/country-flags/",
+  "dependencies": {
+    "imagemin-cli": "^7.0.0"
+  }
 }
