--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.2.10",
   "description": "SVG and PNG renders of all countries' flags.",
   "scripts": {
-    "build-pngs": "node scripts/build-pngs.js",
-    "build-100-250-1000-pngs": "npm run build-pngs 100: && npm run build-pngs 250: && npm run build-pngs 1000:"  },
+    "build-pngs": "node scripts/public-build-pngs.js",
+    "build-100-250-1000-pngs": "npm run build-pngs 100: && npm run build-pngs 250: && npm run build-pngs 1000:"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hampusborgos/country-flags.git"
